# aoc2020

./: Cargo.toml
src/: 10_1.rs  11.rs  11_2.rs  12.rs  12_1.rs  21.rs  22.rs  3_1.rs  3_2.rs  4_1.py  4_1.rs  51.rs  52.rs  61.rs  6_2.rs  71.rs  72.rs  81.rs  82.rs  8_2.rs  91.rs  9_1.py  9_2.py  utils.rs
