 [package]
name = "aoc"
version = "0.1.0"
authors = ["chrlen <christian.lengert@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
itertools = "0.9"
regex = "1"
lazy_static = "1.4.0"

[lib]
name = "utils"
path = "src/utils.rs"

[[bin]]
name = "82"
path = "src/82.rs"

